---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 2020-11-26
  Bugfixes:
    - Fix migration typo.
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2020-11-25
  Bugfixes:
    - Fix missing control locale.
  Changes:
    - Clean up prototype loading.
    - clean_cursor renamed to clear_cursor.
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2020-09-22
  Changes:
    - Remove main inventory zapping as selection tools are a lot smarter now.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2020-05-24
  Features:
    - Add per player settings for Filter Fill and Bar Limit guis.
  Changes:
    - Remove use of script.raise_event.
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2020-05-23
  Bugfixes:
    - Fix error caused by LuaEquipmentGrid.take API change.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2020-05-02
  Bugfixes:
    - Fix for 0.18.22 custom-input deprecation.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2020-04-21
  Features:
    - Added hotkey to switch the players gun while driving.
    - Added hotkeys and Shortcuts for Power Armor Modules.
    - Added abitlity to toggle the minimap.
    - Added to toggle displaying groups and subgroups.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2020-03-19
  Features: