@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.10
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix Filtering and Sorting not working for spider-vehicles.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.9
 Date: 2020-11-26
